    whether the content starts with '{'.
* Fixed bug 1444404 with patch from Samu Nuutamo
  - rdiffdir patch crashes if a regular file is changed to a non-regular
    file (symlink, fifo, ...)
* Fixed bug 1448249 and bug 1449151 thanks to David Coppit.
  - When patching, close base file before renaming
  - Enable --ignore-errors flag in rdiffdir

New in v0.7.02 (2015/03/10)
---------------------------
* Merged in lp:~vincegt/duplicity/swift_regionname
  - Fixes bug #1376628
  - Add mapping of SWIFT_REGIONNAME to select region inside SWIFT when a
    provider proposes more than one region.
* Merged in lp:~aaron-whitehouse/duplicity/progress_option_error
  - Added test_exclude_globbing_filelist_progress_option into
    functional/test_selection.py, which shows the error reported in
    Bug #1264744 - that the --exclude-globbing-filelist does not backup
    the correct files if the --progress option is used. Test is marked as
    an expected failure so as not to cause the test suite to fail.
* Merged in lp:~noizyland/duplicity/fix_azurebackend_container_names
  - Azure Backend examples have underscores in the container names.  These
    are not valid Azure container names.  The underscores have been replaced
    with hypens and a note about valid container names added to the man page.
  - Also corrects a problem where Azure Exceptions were returing unicode
    strings that were not being handled correctly.
* Merged in lp:~user3942934/duplicity/pydrive
  - Currently duplicity uses gdocs backend for Google Drive backups.
    gdocs uses deprecated API and don't allow backups for managed Google
    accounts.  (see https://bugs.launchpad.net/duplicity/+bug/1315684)
  - Added pydrive backend that solves both of those problems. Published
    also on https://github.com/westerngateguard/duplicity-pydrive-backend.
* Fixed some tabs/spaces problems that were causing install failures.
* Fixed variable typo in commandline.py that was causing build fails.