@@ -21,7 +21,7 @@ source_directory target_url
 source_url target_directory
 
 .B duplicity collection-status
-.I [options]
+.I [options] [--file-changed <relpath>]
 target_url
 
 .B duplicity list-current-files
@@ -180,7 +180,7 @@ The
 option enables data comparison (see below).
 
 .TP
-.BI "collection-status " "<url>"
+.BI "collection-status " "[--file-changed <relpath>]" "<url>"
 Summarize the status of the backup repository by printing the chains
 and sets found, and the number of volumes in each.
 
@@ -421,6 +421,15 @@ use --extra-clean unless you know what you're doing.
 See the
 .B cleanup
 argument for more information.
+
+.TP
+.BI "--file-changed " path
+This option may be given in collection-status mode, causing only
+.I path
+status to be collect instead of the entire contents of the backup archive.
+.I path
+should be given relative to the root of the directory backed up.
+
 
 .TP
 .BI "--file-prefix, --file-prefix-manifest, --file-prefix-archive, --file-prefix-signature
