@@ -284,3 +284,6 @@ par2_options = ""
 
 # Whether to enable gio backend
 use_gio = False
+
+# If set, collect only the file status, not the whole root.
+file_changed = None
