@@ -37,6 +37,10 @@ New in v0.7.03 (2015/05/??)
 * Fixed bug 1448249 and bug 1449151 thanks to David Coppit.
   - When patching, close base file before renaming
   - Enable --ignore-errors flag in rdiffdir
+* Added ability to get single file status from collection-status with
+  patch from jitao (bug 1044715), like so:
+  $ duplicity collection-status --file-changed c1 file://./foo
+
 
 New in v0.7.02 (2015/03/10)
 ---------------------------
